# MyTextEditor

./: CMakeLists.txt  README.md
resources/: resources.qrc
resources/styles/: default.qss
src/modules/command/: command.cpp  command.h  commandhistory.cpp  commandhistory.h
src/modules/editor/: editor.cpp  editor.h
src/modules/filemanager/: filemanager.cpp  filemanager.h
src/modules/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/modules/searchmanager/: searchmanager.cpp  searchmanager.h
src/modules/syntaxhighlighter/: syntaxhighlighter.cpp  syntaxhighlighter.h
